# xfce4-nvgpumemgraph-plugin

./: README  README.MD  configure.ac.in
panel-plugin/: Makefile.am  cpu.c  cpu.h  mode.c  mode.h  nvgpumemgraph.desktop.in  os.c  properties.c  properties.h  settings.c  settings.h
po/: POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+15 more)
